fix image alignment

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -19,6 +19,21 @@
   background-color: #4d6d7e;
 }
 
+.mobile-swiper .swiper-pagination-bullet {
+  background: #bbb;
+}
+
+.mobile-swiper .swiper-pagination-bullet-active {
+  background: #4d6d7e !important;
+}
+
+.mobile-swiper .swiper-button-next,
+.mobile-swiper .swiper-button-prev {
+  width: 30px;
+  height: 30px;
+  color: #4d6d7e;
+}
+
 @keyframes fadeUp {
   0% {
     opacity: 0;
